--- a/Simon Game/styles.css
+++ b/Simon Game/styles.css
@@ -3,6 +3,12 @@ body {
   background-color: #011F3F;
 }
 
+
+.start{
+  display: none;
+}
+
+
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
@@ -52,4 +58,36 @@ body {
   background-color: grey;
 }
 
+div{
+  margin: 0 auto;
+}
 
+@media (max-width: 992px) {
+  .start{
+    font-family: 'Press Start 2P', cursive;
+    display: block;
+    margin: auto;
+  }
+  .start{
+    font-weight: 6;
+    font-size: 16px;
+    color: #fff;
+    background-color: rgb(42, 36, 36);
+    padding: 10px 30px;
+    border: solid #010a14 2px;
+    box-shadow: rgb(0, 0, 0) 0px 0px 0px 0px;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    
+    }
+    
+    .start:hover{
+    background-color: #010a14;
+    color: #ffffee;
+    
+    }
+    
+}
